# netflix-vfx-naming

./: .pre-commit-config.yaml  DEVELOPMENT.md  README.md  TESTS.md  pyproject.toml
notebooks/: shot_examples.ipynb
scripts/: example_shot_usage.py  example_show_usage.py
src/netflix_vfx_naming/: Base.py  Episode.py  Scene.py  Season.py  Sequence.py  Shot.py  Show.py  __init__.py
tests/: conftest.py  test_episode.py  test_episode_relationships.py  test_logging.py  test_scene.py  test_scene_relationships.py  test_season.py  test_season_relationships.py  test_sequence.py  test_sequence_relationships.py  test_shot.py  test_shot_relationships.py  test_show.py  test_show_relationships.py
